--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
    "name": "Create AgileZen Story from ZenDesk Ticket",
    "version": "1.0.0",
-   "manifest_version": 1,
+   "manifest_version": 2,
    "description": "Creates an AgileZen story from the ZenDesk ticket in question.",
    "options_page": "options.html",
    "browser_action": {
      "default_icon": "icon.png"
    },
    "permissions": [
-       "http://*.zendesk.com/tickets/*"
+       "*://*.zendesk.com/tickets/*"
    ],
    "content_scripts": [{
-       "matches": ["*.zendesk.com/tickets/*"],
+       "matches": ["*://*.zendesk.com/tickets/*"],
        "css": ["style.css"],
        "js": ["jquery-2.0.3.min.js", "script.js"]
    }]
