--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
      "default_icon": "icon.png"
    },
    "permissions": [
-       "*://*.zendesk.com/tickets/*"
+       "*://*.zendesk.com/tickets/*",
+       "storage"
    ],
    "content_scripts": [{
        "matches": ["*://*.zendesk.com/tickets/*"],
