--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
    "name": "Create AgileZen Story from ZenDesk Ticket",
-   "version": "1.0.0",
+   "version": "1.1.0",
    "manifest_version": 2,
    "description": "Creates an AgileZen story from the ZenDesk ticket in question.",
    "options_page": "options.html",
@@ -9,11 +9,13 @@
    },
    "permissions": [
        "*://*.zendesk.com/tickets/*",
+       "*://helpdesk.mvno.dk/tickets/*",
        "*://*.agilezen.com/api/*",
        "storage"
    ],
    "content_scripts": [{
        "matches": ["*://*.zendesk.com/tickets/*"],
+       "matches": ["*://helpdesk.mvno.dk/tickets/*"],
        "css": ["style.css"],
        "js": ["jquery-2.0.3.min.js", "script.js"]
    }]
